--- a/src/variables.css
+++ b/src/variables.css
@@ -116,6 +116,7 @@
   /* === TRANSICIONES === */
   
   --transition-fast: 150ms ease-in-out;
+  --transition-normal: 300ms ease-in-out;
   --transition-base: 300ms ease-in-out;
   --transition-slow: 500ms ease-in-out;
   
